crowd-162: Fix alignment of headlines/text and form input fields

--- a/crowdsource-frontend/src/main/scss/crowdsource.scss
+++ b/crowdsource-frontend/src/main/scss/crowdsource.scss
@@ -61,6 +61,7 @@ content-row {
     .container {
         margin: 0 auto;
         max-width: $row-width;
+        padding: 0;
     }
 
     &.box .container {
